--- a/docs/styles.css
+++ b/docs/styles.css
@@ -113,9 +113,6 @@ opacity: .6;
 }
 
 
-.profilepic {
-
-}
 
 /*********Add Shape CSS HERE*************/
     .class1 {
@@ -141,4 +138,27 @@ opacity: .6;
   z-index: -1;
   clip-path: polygon(35% 0, 65% 43%, 36% 100%, 0 76%, 0 0);
 
+}
+
+
+.round-border {
+  /* the magic */
+  display: block;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  -ms-border-radius: 200px;
+  -o-border-radius: 200px;
+  border-radius: 200px;
+  /* the rest */
+  position: relative; /* for the overlay later */
+  margin: 0px auto;
+  text-align: center;
+  margin-bottom: 10px;
+  border: 3px solid #FFF;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),inset 0px 3px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 1px 2px rgba(0,0,0,0.3),inset 0px 3px 8px rgba(0,0,0,0.3);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),inset 0px 3px 8px rgba(0, 0, 0, 0.3);
 }
