--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,5 +1,12 @@
 /* css styles */
 
+* {
+  margin: 0;
+  padding: 0;
+  border-sizing: border-box;
+}
+
+/* Blog post author meta info - title */
 .author-meta-title {
     text-transform: uppercase;
     margin-top: -10px;
@@ -8,15 +15,18 @@
     font-weight: 400;
 }
 
+/* Blog post author meta info - content */
 .author-meta-content {
 font-size:0.6em;
 margin-top: -10px;
 }
 
+/* Blog post author meta info - paragraph */
 .course-meta-title>p {
 font-size:0.8em;
 }
 
+/* Course meta info - title */
 .course-meta-title {
     text-transform: uppercase;
     margin-top: -10px;
@@ -25,6 +35,7 @@ font-size:0.8em;
     font-weight: 400;
 }
 
+/* Course meta info - content */
 .course-meta-content {
 font-size:0.7em;
 margin-top: -20px;
@@ -32,35 +43,15 @@ font-weight: 400;
 opacity: .6;
 }
 
-
-
-.grid-container-200 {
-  display: grid;
-  grid-template-columns: 100px;
-  gap: 10px;
-  padding: 10px;
-}
-
-.grid-container-200 > div {
-  padding: 0px 0;
-}
-
-.item1-200 {
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-.item2-200 {
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-
+/* Coloured bar across full width of page  */
 .flash{
   grid-column-start: screen-start-inset;
   grid-column-end: screen-end-inset;
   background-color: #ffedd9;
   margin-bottom: 20px;
 }
+
+/* body text nested within coloured bar */
 
 .flash-content{
   display: block;
@@ -72,73 +63,79 @@ opacity: .6;
 }
 
 
-.a {
+.container{
+  display: flex;
+  padding: 10px;
+  margin: 5px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.items {
+  padding:20px;
+  margin: 10px;
+  flex: 6; /*Controls the realtive ratio of the text to the image*/
+}
+
+.home-box {
     flex-direction: row;
     display: grid;
+    grid-auto-columns: max-content;
+    grid-auto-flow: column;
     grid-template-columns: 60% 40%;
     padding: 0 0 0 0 ;
 }
 
 
-.b {
+.home-box-left {
     text-transform: uppercase;
     font-size: .9em;
     opacity: 1.0;
     font-weight: 400;
 }
 
-.b1 {
+.home-box-title {
   display: block;
   font-size: 3.5em;
   font-weight: 800;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.67em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
 }
 
-.b2 {
+.home-box-content {
   font-size: 0.8em;
 }
 
-.c {
+.home-box-image {
   background-image: url('images/223_UNSW_CBDRH_credit_AnnaKucera.jpg');
   background-color: #ffedd9;
   height: 400px;
   width: 400px;
+  min-width: 400px;
   background-size: cover;
   opacity: 0.8;
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-</svg>
+  flex: 5;
 }
 
 
 
-/*********Add Shape CSS HERE*************/
-    .class1 {
-    height: 250px;
-    width: 250px;
-    clip-path: polygon(20% 0, 0% 100%, 100% 100%);
-    background-color:yellow;
-    }
-
-    .bg-shape {
+.bg-shape {
   position: relative;
   overflow: hidden;
   padding: 50px;
-}
+  }
 
-.bg-shape:after {
-  content: '';
-  position: absolute;
-  width: 1000px;
-  height: 500px;
-  background: #ddf7ed;
-  opacity: .8;
-  z-index: -1;
-  clip-path: polygon(35% 0, 65% 43%, 36% 100%, 0 76%, 0 0);
-
-}
+  .bg-shape:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #ddf7ed;
+    opacity: .8;
+    z-index: -1;
+    clip-path: polygon(35% 0, 65% 43%, 36% 100%, 0 76%, 0 0);
+  }
 
 
 .round-border {
