--- a/docs/styles.css
+++ b/docs/styles.css
@@ -160,6 +160,29 @@ opacity: .6;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),inset 0px 3px 8px rgba(0, 0, 0, 0.3);
 }
 
+
+.oval-border {
+  /* the magic */
+  display: block;
+  width: 200px;
+  height: 250px;
+  overflow: hidden;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  -ms-border-radius: 200px;
+  -o-border-radius: 200px;
+  border-radius: 200px;
+  /* the rest */
+  position: relative; /* for the overlay later */
+  margin: 0px auto;
+  text-align: center;
+  margin-bottom: 10px;
+  border: 3px solid #FFF;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),inset 0px 3px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 1px 2px rgba(0,0,0,0.3),inset 0px 3px 8px rgba(0,0,0,0.3);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3),inset 0px 3px 8px rgba(0, 0, 0, 0.3);
+}
+
 /* These manage the appearance of the biopic pics on the staff profile pages */
 .grid-container-200 {
   display: grid;
