--- a/docs/styles.css
+++ b/docs/styles.css
@@ -311,5 +311,70 @@ table tr td tr {
 }
 
 
-figcaption {
+/* Horizontal scroller */
+/* From https://codepen.io/kevinpowell/pen/ExbKBQa */
+
+@import url("https://unpkg.com/open-props");
+@import url("https://unpkg.com/open-props/normalize.min.css");
+
+/* general styling */
+
+.container {
+  inline-size: min(100% - 4rem, 70rem);
+  margin-inline: auto;
+}
+
+.flow {
+  display: grid;
+  gap: var(--size-3);
+}
+
+.page-header {
+  padding-block: var(--size-9);
+  margin-block-end: var(--size-9);
+  background: var(--gradient-16);
+  color: var(--gray-0);
+  box-shadow: var(--shadow-2);
+}
+
+.page-title {
+  font-size: var(--font-size-fluid-3);
+}
+
+.page-subtitle {
+  font-size: var(--font-size-fluid-1);
+}
+
+.section-title {
+  padding-inline-start: var(--size-6);
+  margin-block: var(--size-9) var(--size-3);
+}
+
+
+.media-scroller {
+  --_spacer: 0.5rem;
+  display: grid;
+  width: 100%;
+  gap: var(--_spacer);
+  padding: 0 var(--_spacer) var)(--_spacer) 0;
+}
+
+@media (min-width: 600px) {
+  .media-scroller { grid-template-columns: repeat(3, 1fr); }
+}
+
+.media-element {
+  display: grid;
+  grid-template-rows: min-content;
+  gap: var(--_spacer);
+  background: #e2e7f6;
+  padding: var(--_spacer);
+  border-radius: var(--radius-20);
+  box-shadow: 5px 10px #cdcece;
+}
+
+.media-element > iframe {
+  inline-size: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
 }
