--- a/custom.scss
+++ b/custom.scss
@@ -6,3 +6,7 @@ $primary: #ddf7ed;
 $navbar-bg: #ddf7ed;
 $link-color: #926900;
 $callout-color-note: #926900;
+
+.rotate-img img {
+  transform: rotate(90deg);
+}
